# base-project

backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/api/: main.py
backend/app/api/endpoints/: health_check.py
backend/app/logging/: json_formatter.py  log_config.py
backend/config/: .env  settings.py
backend/config/envs/: .env.development  .env.testing
